More spacing fixes

--- a/_sass/content.scss
+++ b/_sass/content.scss
@@ -7,16 +7,16 @@
 
   h1 {
     font-size: 2rem;
-    margin: .5rem;
+    margin: 0;
   }
   
   h2 {
     font-size: 1.5rem;
-    margin: .5rem;
+    margin: .5rem 0;
   }
 
   h3 {
-    margin: .5rem;
+    margin: .5rem 0;
   }
 
   p {
